# aod-dynamic-server

./: .gitignore  API.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  config.cmake.template  config.yml.template  test_client.py
.claude/: settings.local.json
.claudesettings/skills/: spectrum-awg.md
proto/: CMakeLists.txt  aod_server.proto
src/: CMakeLists.txt  awg_interface.cpp  awg_interface.h  config.cpp  config.h  config.h.in  main.cpp  server.cpp  server.h  shared_memory.cpp  shared_memory.h  thread_safe_queue.h
src/cuda/: gpu_buffers.cu  gpu_buffers.h
